# c-project-template

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
